# crust

./: .env  Cargo.toml  README.md
migrations/2023-07-18-115759_create_paths/: down.sql  up.sql
migrations/2023-07-18-122811_create_projects/: up.sql
src/: create_paths.sql  create_projects.sql  db.rs  main.rs
src/db/: models.rs  schema.rs
