[package]
name = "crust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cfonts = "1.1.0"
rustyline = { version = "12.0.0", features = ["with-sqlite-history", "derive"] }
serde = { version = "1.0.171", features = ["derive"] }
serde_json = "1.0.103"
