[package]
name = "crust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cfonts = "1.1.0"
diesel = { version = "2.1.0", features = ["sqlite", "r2d2", "serde_json"] }
dotenv = "0.15.0"
indoc = "2.0.3"
rustyline = { version = "12.0.0", features = ["with-sqlite-history", "derive"] }
serde = { version = "1.0.171", features = ["derive"] }
serde_json = "1.0.103"
uuid = { version = "1.4.1", features = ["v4", "serde"] }
